--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
@@ -24,8 +24,8 @@
     <meta name="msapplication-tap-highlight" content="no" />
 
     <!-- PWA Icons -->
-    <link rel="apple-touch-icon" href="./icon-192.svg" />
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="apple-touch-icon" href="/icon-192.svg" />
+    <link rel="manifest" href="/manifest.json" />
 
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -46,14 +46,14 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@emprestae" />
     <meta name="twitter:image" content="/placeholder.svg" />
-    <script type="module" crossorigin src="./js/index-CcjQ475G.js"></script>
-    <link rel="modulepreload" crossorigin href="./js/react-vendor-DiWOpCri.js">
-    <link rel="modulepreload" crossorigin href="./js/ui-vendor-Bljt0VZb.js">
-    <link rel="modulepreload" crossorigin href="./js/query-vendor-C2mas1N8.js">
-    <link rel="modulepreload" crossorigin href="./js/utils-vendor-BPxFQOn-.js">
-    <link rel="modulepreload" crossorigin href="./js/state-vendor-C6b-uoUP.js">
-    <link rel="modulepreload" crossorigin href="./js/animation-vendor-DloazYGd.js">
-    <link rel="stylesheet" crossorigin href="./css/index-CRR9AxKx.css">
+    <script type="module" crossorigin src="/js/index-CfkHTg1B.js"></script>
+    <link rel="modulepreload" crossorigin href="/js/react-vendor-DiWOpCri.js">
+    <link rel="modulepreload" crossorigin href="/js/ui-vendor-Bljt0VZb.js">
+    <link rel="modulepreload" crossorigin href="/js/query-vendor-C2mas1N8.js">
+    <link rel="modulepreload" crossorigin href="/js/utils-vendor-BPxFQOn-.js">
+    <link rel="modulepreload" crossorigin href="/js/state-vendor-CWRz9j4V.js">
+    <link rel="modulepreload" crossorigin href="/js/animation-vendor-DloazYGd.js">
+    <link rel="stylesheet" crossorigin href="/css/index-CRR9AxKx.css">
   </head>
 
   <body>
